--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,15 @@
 
   
+.brand_logo{
+    width: 50px;
+    height: 50px;
+    
+}
+
+#menu{
+    background-color: yellow !important;
+}
+
+.sidenav{
+    color: red;
+}
